--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
     <h1 align="center">
       movie
     </h1>
+    <table border=2 bordercolor=orange width="70" align="center">
+      <h1> this is a movie list and review website </h1>
+      <tr>
+        <td>
+          introduction
+        </td>
+        <td>
+          movies
+        </td>
+        <td>
+          review
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
