--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <h3> this is a movie list and review website </h3>
       <tr>
         <td>
-          introduction
+          <a href="introduction.html" style-"text-decoaration:none"> introduction </a>
+           <a href="review.html" style-"text-decoaration:none"> review </a>
+           <a href="movies.html" style-"text-decoaration:none"> movies </a>
         </td>
         <td>
           movies
@@ -26,6 +28,7 @@
           review
         </td>
       </tr>
+    
     </table>
   </body>
 </html>
