--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  <a href="review.html" style-"text-decoaration:none"> review </a>
           </td>
       </tr>
-    
     </table>
+    <img src="movies.png"> </img>
   </body>
 </html>
