--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
           </td>
       </tr>
     </table>
-    <img src="movies.png"> </img>
+    <img src="movies.png" align="center"> </img>
   </body>
 </html>
