--- a/movie.html
+++ b/movie.html
@@ -1,3 +1,34 @@
 <html>
+  <head> 
+  <style>
+  body {backround-coulor:blue;
+    }
+    h1{color:green;font-size:150px;font-family:comic sans MS;}
+    </style>
+    <title>
+     movies
+    </title>
+  </head>
   <body>
+    <h1 align="center">
+      movie
+    </h1>
+    <table border=2 bordercolor=orange width="70%" align="center">
+      <h3> this is a movie list and review website </h3>
+      <tr>
+        <td>
+          <a href="introduction.html" style-"text-decoaration:none"> introduction </a>  
+        </td>
+        <td>
+          <a href="movies.html" style-"text-decoaration:none"> movies </a> 
+        </td>
+        <td>
+ <a href="review.html" style-"text-decoaration:none"> review </a>
+          </td>
+      </tr>
+    </table>
+    <img src="movies.png" align="center"> </img>
+  </body>
+</html>
+
     
