--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   body {backround-coulor:blue;
     }
     h1{color:green;font-size:150px;font-family:comic sans MS;}
+    img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
     </style>
     <title>
      movies
