--- a/movie.html
+++ b/movie.html
@@ -3,7 +3,7 @@
   <style>
   body {backround-coulor:blue;
     }
-    h1{color:green;font-size:150px;font-family:comic sans MS;}
+    h1{color:red;font-size:150px;font-family:comic sans MS;}
     </style>
     <title>
      movies
@@ -17,15 +17,15 @@
       <h3> this is a movie list and review website </h3>
       <tr>
         <td>
-          <a href="introduction.html" style-"text-decoaration:none"> introduction </a>  
+          movie
         </td>
         <td>
-          <a href="movies.html" style-"text-decoaration:none"> movies </a> 
+       review
         </td>
-        <td>
- <a href="review.html" style-"text-decoaration:none"> review </a>
-          </td>
       </tr>
+      <tr>
+        <td>
+          
     </table>
     <img src="movies.png" align="center"> </img>
   </body>
