--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="introduction.html" style-"text-decoaration:none"> introduction </a>  
         </td>
         <td>
-          <a href="movies.html" style-"text-decoaration:none"> movies </a> 
+          <a href="movie.html" style-"text-decoaration:none"> movies </a> 
         </td>
         <td>
  <a href="review.html" style-"text-decoaration:none"> review </a>
