--- a/movie.html
+++ b/movie.html
@@ -40,6 +40,7 @@ tobey maguire was good, but tom holland was the best. better acting skills. brou
 </td>
 </tr>
     </table>
+<a href="index.html"> click here to go to home page </a>
   </body>
 </html>
 
