--- a/movie.html
+++ b/movie.html
@@ -14,7 +14,7 @@
       movie
     </h1>
     <table border=2 bordercolor=orange width="70%" align="center">
-      <h3> this is a movie list and review website </h3>
+      <h3> this is a avengers movie list and review website </h3>
       <tr>
         <td>
           movie
