--- a/non avengers movies.html
+++ b/non avengers movies.html
@@ -1,1 +1,47 @@
+<html>
+  <head> 
+  <style>
+  body {backround-coulor:orange;
+    }
+    h1{color:blue;font-size:150px;font-family:comic sans MS;}
+    </style>
+    <title>
+     non avengers movies
+    </title>
+  </head>
+  <body>
+    <h1 align="center">
+   non avengers movies
+    </h1>
+    <table border=2 bordercolor=green width="70%" align="center">
+      <h3> this is a non avengers movie list and review website </h3>
+      <tr>
+        <td>
+        non avengers movies
+        </td>
+        <td>
+       review
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img src="spiderman.png" width="200" height= "200"> </img>  
+      </td>
+    <td>
+tobey maguire was good, but tom holland was the best. better acting skills. brought the teenager, nerd, and hero aspect perfectly. and his movies were better. my opinions. I LOVEEEE this movie. i’ve seen it about 6 times, and never get bored. and here is what i ...
+    </td> 
+    </tr>
+  <tr>
+    <td>
+        <img src="the batman.png" width="200" height= "200"> </img>
+  </td>
+<td>
+   The Batman is a fantastic film. This movie really explores batman in a very different way. Robert Pattinson does a phenomenal job as the caped crusader, so much so that when you look at batman, you also see Bruce Wayne and his inner torment and darkness lurking within. The scenes with Bruce without the suit interacting and Alfred were very effective and powerful. All the characters are true to what they are supposed to be like. All the actors which include Robert Pattinson, Zoe Kravitz, Jeffrey   
+</td>
+</tr>
+    </table>
+<a href="index.html"> click here to go to home page </a>
+  </body>
+</html>
 
+    
