--- a/non avengers movies.html
+++ b/non avengers movies.html
@@ -25,22 +25,24 @@
       </tr>
       <tr>
         <td>
-          <img src="spiderman.png" width="200" height= "200"> </img>  
+          <img src="83.png" width="200" height= "200"> </img>  
       </td>
     <td>
-tobey maguire was good, but tom holland was the best. better acting skills. brought the teenager, nerd, and hero aspect perfectly. and his movies were better. my opinions. I LOVEEEE this movie. i’ve seen it about 6 times, and never get bored. and here is what i ...
-    </td> 
+    What a movie ! 
+The film is based on India's victory at the 1983 World Cup and boasts of a terrific cast. This is a real life story and for Indians this was a 00000000moment of pride
+    </td>
     </tr>
   <tr>
     <td>
-        <img src="the batman.png" width="200" height= "200"> </img>
   </td>
+        <img src="jersey.png" width="200" height= "200"> </img>
 <td>
-   The Batman is a fantastic film. This movie really explores batman in a very different way. Robert Pattinson does a phenomenal job as the caped crusader, so much so that when you look at batman, you also see Bruce Wayne and his inner torment and darkness lurking within. The scenes with Bruce without the suit interacting and Alfred were very effective and powerful. All the characters are true to what they are supposed to be like. All the actors which include Robert Pattinson, Zoe Kravitz, Jeffrey   
+    We’re introduced to an Arjun Talwar (Shahid Kapoor), who’s unemployed, a middle-aged father whose love for cricket is clearly visible because even his kid has the same dream and following that he asks his father for gifting him a jersey. While Arjun struggles to fulfil such a trivial wish of his son, Mrs Talwar, Vidya (Mrunal Thakur) wants him to get his old job back, but Arjun wants to step back into the field of his long-lost dreams.
 </td>
 </tr>
     </table>
-<a href="index.html"> click here to go to home page </a>
+<a href="index.html"> click here to go to home page </
+    </table>a>
   </body>
 </html>
 
