--- a/non avengers movies.html
+++ b/non avengers movies.html
@@ -25,7 +25,7 @@
       </tr>
       <tr>
         <td>
-          <img src="83.png" width="200" height= "200"> </img>  
+          <img src="83.png.png" width="200" height= "200"> </img>  
       </td>
     <td>
     What a movie ! 
