Update non avengers movies.html

--- a/non avengers movies.html
+++ b/non avengers movies.html
@@ -34,8 +34,7 @@ The film is based on India's victory at the 1983 World Cup and boasts of a terri
     </tr>
   <tr>
     <td>
-  </td>
-        <img src="jersey.png" width="200" height= "200"> </img>
+      <img src="jersey.png" width="200" height= "200"> </img> </td>
 <td>
     We’re introduced to an Arjun Talwar (Shahid Kapoor), who’s unemployed, a middle-aged father whose love for cricket is clearly visible because even his kid has the same dream and following that he asks his father for gifting him a jersey. While Arjun struggles to fulfil such a trivial wish of his son, Mrs Talwar, Vidya (Mrunal Thakur) wants him to get his old job back, but Arjun wants to step back into the field of his long-lost dreams.
 </td>
