--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <td>
           <a href="movie.html" style-"text-decoaration:none"> movies </a> 
         </td>
-        <td>
+        <td style="width:70%">
  <a href="non avengers movies.html" style-"text-decoaration:none"> non avengers movies </a>
           </td>
       </tr>
