--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   margin-left: auto;
   margin-right: auto;
 }
+    table, th, td {
+  border:1px solid black;
+  border-collapse: collapse;
+}
+
     </style>
     <title>
      movies
@@ -24,7 +29,7 @@
         <td>
           <a href="movie.html" style-"text-decoaration:none"> movies </a> 
         </td>
-        <td style="width:70%">
+        <td style="width:40%">
  <a href="non avengers movies.html" style-"text-decoaration:none"> non avengers movies </a>
           </td>
       </tr>
